<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ocean">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info"
        android:textColor="@color/DarkGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info2"
        android:textColor="@color/DarkGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info3"
        android:textColor="@color/DarkGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/c_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="🔎 Enter City Name"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Select"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />


</LinearLayout>