<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sunny_back"
    android:id="@+id/layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/search"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Rajshahi"
            />
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/map"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
        />
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Bangladesh"
            android:textSize="20sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>
<TextView
    android:id="@+id/condition"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="TODAY"
    android:textSize="30sp"
    android:textColor="@color/black"
    android:layout_gravity="right"
    android:layout_marginRight="55dp"



    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/view"
            android:layout_width="200dp"
            android:layout_height="166dp"
            android:src="@drawable/storm"
            android:layout_marginTop="-25dp"
            />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="31°C"
            android:textSize="70sp"
            android:textColor="@color/black"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:typeface="sans"
        android:textColor="@color/black"
        android:text="Max Temp-30"
        android:layout_marginRight="30dp"
        />
    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:typeface="sans"
        android:textColor="@color/black"
        android:text="Min Temp-10"
        android:layout_marginLeft="20dp"
        />


</LinearLayout>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:typeface="serif"
        android:text="Friday"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:typeface="serif"
        android:text="24 January 2024"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hum"
        android:textSize="40dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Humidity: "
        android:layout_gravity="center"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="70%"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air"
            android:textSize="40dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Wind: "
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"

            />
        <TextView
            android:id="@+id/air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="4.52m/s"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textSize="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Sunrise: "
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"

            />
        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="06:10 am"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textSize="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="Sunset: "
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"/>
        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="06.10 pm"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press"
            android:textSize="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="Pressure: "
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"/>
        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="760 mmHg"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"

            />
    </LinearLayout>

</LinearLayout>